<resources>
    <string name="adMob_app_id" translatable="false">ca-app-pub-9841217337381410~1214844685</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-9841217337381410/7121777483</string>
    <string name="loggedIn" translatable="false">loggedIn</string>
    <string name="usernameKEY" translatable="false">Username</string>
    <string name="passwordKEY" translatable="false">Password</string>
    <string name="student_name" translatable="false">student_name</string>
    <string name="user_id" translatable="false">user_id</string>
    <string name="flag_badge" translatable="false">flag badge</string>
    <string name="trend_indicator" translatable="false">trend_indicator</string>
    <string name="KEY_DARK_MODE" translatable="false">KEY_DARK_MODE</string>
    <string name="user_avatar" translatable="false">user_avatar</string>
    <string name="shared_element_course_header" translatable="false">SHARE://COURSE_HEADER</string>
    <string name="shared_element_course_fab" translatable="false">SHARE://COURSE_FAB</string>
    <string name="shared_element_course_subject_title" translatable="false">SHARE://COURSE_SUBJECT_TITLE</string>
    <string name="shared_element_course_card" translatable="false">SHARE://COURSE_CARD</string>
    <string name="postURL" translatable="false">https://api.schoolpower.tech/api/2.0/get_data.php</string>
    <string name="avatarURL" translatable="false">https://api.schoolpower.tech/api/2.0/set_avatar.php</string>
    <string name="updateURL" translatable="false">https://files.schoolpower.tech/update.json</string>
    <string name="ildURL" translatable="false">https://files.schoolpower.tech/ild.json</string>
    <string name="backupServersURL" translatable="false">https://coding.net/u/nullptr_t/p/schoolpower/git/raw/master/server_list.json</string>
    <string name="imageUploadURL" translatable="false">https://sm.ms/api/upload</string>
    <string name="paypalDonationURL" translatable="false">https://paypal.me/GWang828</string>
    <string name="bitcoin_address" translatable="false">1NRdAgeRdapbRe3JQRmNCRfWHR3T664jKf</string>
    <string name="ether_address" translatable="false">0x3C170f8dd9A2B28554f8bA034B0fF72FfF92FBa7</string>
    <string-array name="list_preference_display_types_values" translatable="false">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="list_preference_language_values" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="bug_report_email" translatable="false">mailto:harryyunull@gmail.com</string>
    <string name="eula_address" translatable="false">https://schoolpower.tech/eula.html</string>
    <string name="changelog_address" translatable="false">https://github.com/SchoolPower/SchoolPower-Android/releases</string>
    <string name="carbon_address" translatable="false">https://github.com/HITGIF</string>
    <string name="null_address" translatable="false">https://github.com/harrynull</string>
    <string name="website_address" translatable="false">https://schoolpower.tech</string>
    <string name="server_status_address" translatable="false">https://status.schoolpower.tech</string>
    <string name="source_code_address" translatable="false">https://github.com/SchoolPower</string>
    <string name="default_android_download_address" translatable="false">https://api.schoolpower.tech/dist/latest.php</string>
    <string name="ios_download_address" translatable="false">https://itunes.apple.com/cn/app/schoolpower/id1255370309</string>
    <string name="app_name">SchoolPower</string>
    <string name="action_refreshing">Refresh</string>
    <string name="action_gpa">GPA</string>
    <string name="action_show_json">View raw JSON data</string>
    <string name="share_as_file">Share as JSON file</string>
    <string name="share_as_text">Share as plain text</string>
    <string name="dashboard">Dashboard</string>
    <string name="charts">Charts</string>
    <string name="attendance">Attendance</string>
    <string name="course_detail">Course Detail</string>
    <string name="preference">Preference</string>
    <string name="about">About</string>
    <string name="sign_out">Sign Out</string>
    <string name="settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="copyright">Copyright © 2018 SchoolPower Studio</string>
    <string name="copyright_short">© 2018 SchoolPower Studio</string>
    <string name="version">Version</string>
    <string name="eula">User Agreement</string>
    <string name="changelog">Changelog</string>
    <string name="author">Author</string>
    <string name="license">License</string>
    <string name="carbonylgroup">CarbonylGroup</string>
    <string name="null_name">Null</string>
    <string name="evaluation">Evaluation</string>
    <string name="comment">Comment</string>
    <string name="grades">GRADES</string>
    <string name="block">Block</string>
    <string name="room">Room</string>
    <string name="term">Term</string>
    <string name="assignments">Assignments</string>
    <string name="all_terms">ALL TERMS</string>
    <string name="unpublished">Unpublished</string>
    <string name="data_updated">Data Updated</string>
    <string name="authenticating">Authenticating&#8230;</string>
    <string name="wrong_password">Invalid Username or Password</string>
    <string name="no_connection">Cannot connect to server</string>
    <string name="server_problem">Server error encountered: </string>
    <string name="user_id_indicator">User ID:</string>
    <string name="no_username">No Username</string>
    <string name="the_end">THIS IS THE END</string>
    <string name="nothing_here">Nothing Here.</string>
    <string name="perfect_attendance">Perfect Attendance!</string>
    <string name="gpa_is">has a GPA of</string>
    <string name="gpa_segments_custom">Custom</string>
    <string name="gpa_segments_official">Official</string>
    <string name="gpa_segments_all">All</string>
    <string name="sweet">SWEET</string>
    <string name="gpa_not_available">GPA not available</string>
    <string name="gpa_not_available_because">Your GPA is currently not available because there is no data.</string>
    <string name="alright">Alright</string>
    <string name="upgrade_title">New upgrade available!</string>
    <string name="upgrade_pos">UPGRADE</string>
    <string name="upgrade_neg">LATER</string>
    <string name="i_love_open_source">I love open source software.</string>
    <string name="signing_out_dialog_title">Signing Out</string>
    <string name="signing_out_dialog_message">Are you sure to sign out?</string>
    <string name="signing_out_dialog_positive">Sign Out</string>
    <string name="signing_out_dialog_negative">Don\'t</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_settings">Settings</string>
    <string name="display">Display</string>
    <string name="dashboard_displays">Dashboard displays</string>
    <string name="language">Language</string>
    <string name="dashboard_display_preference_summary_prefix">The score of&#160;</string>
    <string name="dashboard_display_preference_summary_suffix"> </string>
    <string name="notification">Notification</string>
    <string name="notification_settings">Notification</string>
    <string name="only_alert">SchoolPower is currently ONLY available for the students in Maple Leaf Education System (MLES) in China.</string>
    <string name="i_understand">I Understand</string>
    <string-array name="list_preference_display_types_entries">
        <item>This term</item>
        <item>This semester</item>
    </string-array>
    <string-array name="list_preference_language_entries">
        <item>System Default</item>
        <item>English</item>
        <item>正體中文</item>
        <item>简体中文</item>
    </string-array>
    <string-array name="terms_sample" translatable="false">
        <item>T1</item>
        <item>T2</item>
        <item>S1</item>
    </string-array>
    <string name="show_inactive_title">Show inactive subjects</string>
    <string name="show_inactive_summary">Show subjects that you are not currently taking.</string>
    <string name="enable_notification">Notify new assignments</string>
    <string name="notification_show_grade">Show grades in notification</string>
    <string name="notification_show_no_grade_assignment">Notify ungraded assignments</string>
    <string name="notification_new">New assignments</string>
    <string name="attendance_new">New attendances</string>
    <string name="support">Support</string>
    <string name="report_bug">Report a bug</string>
    <string name="report_bug_summary">Contact developer with email.</string>
    <string name="feedback_forum">Visit feedback forum</string>
    <string name="feedback_forum_summary">View announcements, give suggestions or report bugs via our forum</string>
    <string name="choose_email_app">Choose an email app…</string>
    <string name="bug_report_email_subject">Found Bug(s) in SchoolPower</string>
    <string name="bug_report_email_content">Please provide as much info as possible, such as how to reproduce it, what is the expected result. \nDebug Info: SchoolPower Android %s.\nPowerSchool Username and Password (Optional, help us solve it faster): \n</string>
    <string name="visit_website">Visit website</string>
    <string name="source_code">Get source code</string>
    <string name="customize_gpa">Customize GPA</string>
    <string name="list_preference_custom_gpa_select">Select subjects</string>
    <string name="list_preference_custom_gpa_calculate">Calculate rule</string>
    <string name="dashboard_gpa_rule_summary_prefix">Calculate&#160;</string>
    <string name="dashboard_gpa_rule_summary_suffix">&#160;subjects in your selections</string>
    <string name="custom_gpa_not_available">Custom GPA not available</string>
    <string name="custom_gpa_not_available_because">Please go to settings to customize your GPA calculate rules.</string>
    <string-array name="list_preference_gpa_calculate_entries">
        <item>All</item>
        <item>Highest 3</item>
        <item>Highest 4</item>
        <item>Highest 5</item>
    </string-array>
    <string-array name="list_preference_gpa_calculate_values" translatable="false">
        <item>all</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="empty_array" />
    <string name="powerschool_disabled">PowerSchool is currently disabled by school. Please contact school for more information.</string>
    <string name="collected">Collected</string>
    <string name="late">Late</string>
    <string name="missing">Missing</string>
    <string name="exempt">Score is exempt from final grade</string>
    <string name="support_us">Support Us</string>
    <string name="Android" translatable="false">Android</string>
    <string name="iOS" translatable="false">iOS</string>
    <string name="qr_code">QR Code</string>
    <string name="donation_title">We are running out of money…</string>
    <string name="donation_message">The expensive Apple developers fee and server costs thousands of yuan every year, not to mention the enormous time cost. Our only income, displaying ads, brought us merely $118.78 (¥804.25) the last year. We have had a net loss over a thousand yuan so far.
\n\nIf you feel that this app has helped you or you hope to get rid of the ads soon, you are more than welcome to donate us, or introduce this app to the students around you. Any help would be much appreciated ( ́,,•ω•,,)♡.
</string>
    <string name="donation_cancel">NO THANKS</string>
    <string name="donation_ok">DONATE</string>
    <string name="donation_promote">PROMOTE</string>
</resources>