<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/nav_dashboard"
            android:checkable="true"
            android:icon="@drawable/ic_dashboard_white_24dp"
            android:title="@string/dashboard"
            android:checked="true"/>
        <item
            android:id="@+id/nav_charts"
            android:checkable="true"
            android:icon="@drawable/ic_insert_chart_white_24dp"
            android:title="@string/charts" />
        <item
            android:id="@+id/nav_attendance"
            android:checkable="true"
            android:icon="@drawable/ic_beenhere_white_24dp"
            android:title="@string/attendance" />
    </group>

    <item android:title="@string/preference">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_white_24dp"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_support"
                android:checkable="true"
                android:icon="@drawable/ic_star_white_24dp"
                android:title="@string/support_us" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_white_24dp"
                android:title="@string/about" />
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@drawable/ic_exit_to_app_white_24dp"
                android:title="@string/sign_out" />
        </menu>
    </item>

</menu>