<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/display">

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/list_preference_language_entries"
            android:entryValues="@array/list_preference_language_values"
            android:icon="@drawable/ic_language_accent"
            android:key="list_preference_language"
            android:summary="%s"
            android:title="@string/language" />

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/list_preference_display_types_entries"
            android:entryValues="@array/list_preference_display_types_values"
            android:icon="@drawable/ic_dashboard_display"
            android:key="@string/list_preference_dashboard_display"
            android:summary="%s"
            android:title="@string/dashboard_displays" />

    </PreferenceCategory>

</PreferenceScreen>