<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.carbonylgroup.schoolpower.activities.MainActivity">
    <item
        android:id="@+id/action_refresh"
        android:title="@string/action_refreshing"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_show_json"
        android:title="@string/action_show_json"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_birthday"
        android:title="birthday"
        app:actionLayout="@layout/lottie_menu_layout"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_gpa"
        android:icon="@drawable/ic_grade_white_24dp"
        android:title="@string/action_gpa"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_category"
        android:icon="@drawable/ic_donut_small_white_24dp"
        android:title="@string/action_category"
        app:showAsAction="always" />
</menu>
