<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/qitao_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="3dp"
    app:cardBackgroundColor="?card_background"
    app:cardCornerRadius="2dp"
    app:cardElevation="3dp"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="false">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/donate_image_view"
            android:layout_width="match_parent"
            android:layout_height="194dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_donation" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/donate_image_view"
            android:padding="8dp">

            <TextView
                android:id="@+id/donate_title"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/donation_title"
                android:textColor="?colorAccent" />

            <TextView
                android:id="@+id/donate_message"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/donate_title"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/donation_message"
                android:textColor="?android:textColorSecondary" />

            <Button
                android:id="@+id/donate_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_below="@+id/donate_message"
                android:layout_alignParentEnd="true"
                android:text="@string/donation_ok"
                android:textColor="?colorAccent" />

            <Button
                android:id="@+id/promote_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/donate_button"
                android:layout_marginEnd="0dp"
                android:layout_toStartOf="@+id/donate_button"
                android:text="@string/donation_promote"
                android:textColor="?colorAccent" />

            <Button
                android:id="@+id/dismiss_donate_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/promote_button"
                android:layout_marginEnd="4dp"
                android:layout_toStartOf="@+id/promote_button"
                android:text="@string/donation_cancel"
                android:textColor="?android:textColorSecondary" />

        </RelativeLayout>

    </RelativeLayout>

</android.support.v7.widget.CardView>
