<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bg_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="3dp"
    app:cardBackgroundColor="?card_background"
    app:cardCornerRadius="2dp"
    app:cardElevation="3dp"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="false">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ild_image_view"
            android:layout_width="match_parent"
            android:layout_height="194dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_donation" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ild_image_view"
            android:padding="8dp">

            <TextView
                android:id="@+id/ild_title"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/donation_title"
                android:textColor="?colorAccent" />

            <TextView
                android:id="@+id/ild_message"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ild_title"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/donation_message"
                android:textColor="?android:textColorSecondary" />

            <Button
                android:id="@+id/ild_primary_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/ild_message"
                android:layout_marginTop="8dp"
                android:text="@string/donation_ok"
                android:textColor="?colorAccent" />

            <Button
                android:id="@+id/ild_secondary_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/ild_primary_button"
                android:layout_marginEnd="0dp"
                android:layout_toStartOf="@+id/ild_primary_button"
                android:text="@string/donation_promote"
                android:textColor="?colorAccent"
                android:visibility="gone" />

            <Button
                android:id="@+id/ild_dismiss_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/ild_primary_button"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="5dp"
                android:text="@string/donation_cancel"
                android:textColor="?android:textColorSecondary"
                android:visibility="gone" />

        </RelativeLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>
